src/components/Comment/Comment.module.scss
@use '../../sass/abstracts/variables.module';
@use '../../sass/abstracts/mixins.module';

.comment {
  display: grid;

  grid-template-rows: auto auto;

  &__content-container {
    grid-column: 1/-1;

    display: flex;
    flex-direction: column;
    gap: 0.5rem;
  }

  &__content {
    display: grid;

    grid-template-columns: 1fr 10fr 10fr 1fr;
    grid-template-rows: 5rem 1fr auto;
    column-gap: 1rem;
    row-gap: 1rem;

    @include mixins.respond(tab-port) {
      grid-template-columns: 1fr 1fr;
      grid-template-rows: 1fr auto auto 1fr;
      row-gap: 1rem;
    }

    &__score {
      grid-row: 1/-1;
      grid-column: 1;

      display: flex;
      flex-direction: column;
      flex: 0 1 4rem;
      gap: 1rem;

      padding: 1.6rem 0;
      border-radius: 0.8rem;

      align-self: start;
      justify-self: center;

      background-color: variables.$color-very-light-gray;

      @include mixins.respond(tab-port) {
        grid-row: 4;
        justify-self: start;
        flex-direction: row;
        gap: 0.75rem;
        align-items: center;
        padding: 1rem;
      }

      &__btn {
        border: none;
        cursor: pointer;
        background-color: inherit;
        padding: 0;

        display: flex;

        justify-content: center;
        align-items: center;

        &:hover &__icon {
          fill: variables.$color-moderate-blue;
        }
      }

      &__value {
        color: variables.$color-moderate-blue;
        font-weight: 900;
        min-width: 5rem;
        text-align: center;

        @include mixins.respond(tab-port) {
          min-width: 2rem;
        }

        @include mixins.respond(phone) {
          min-width: 1.7rem;
          font-size: 1.4rem;
        }
      }
    }

    &__details {
      justify-self: start;
      align-self: center;

      display: flex;
      align-items: center;
      gap: 1.4rem;

      @include mixins.respond(tab-port) {
        grid-column: 1/-1;
        gap: 0.7rem;
      }

      & > * {
        flex: 1 0 auto;
      }

      &__user-image {
        max-width: 3rem;
        max-height: auto;
      }

      &__user-name {
        font-weight: 600;
      }

      &__you {
        font-size: 1.4rem;
        color: variables.$color-white;
        background-color: variables.$color-moderate-blue;
        padding: 0 1rem;

        border-radius: 0.2rem;

        @include mixins.respond(phone) {
          font-size: 1.2rem;
          padding: 0 0.5rem;
        }
      }
    }

    &__actions {
      grid-row: 1;
      grid-column: 3;
      justify-self: end;

      display: flex;
      justify-content: flex-end;
      align-items: center;
      gap: 3rem;

      @include mixins.respond(tab-port) {
        grid-row: 4;
        grid-column: 2;
      }
    }

    &__reply-btn,
    &__edit-btn,
    &__delete-btn {
      background-color: inherit;
      border: none;
      cursor: pointer;

      color: variables.$color-moderate-blue;
      font-weight: 700;
      display: flex;
      gap: 1rem;

      &:hover {
        color: variables.$color-light-grayish-blue;
      }
      &:hover &__icon {
        fill: variables.$color-light-grayish-blue;
      }
    }

    &__delete-btn {
      color: variables.$color-soft-red;

      &:hover {
        color: variables.$color-pale-red;
      }
      &:hover &__icon {
        fill: variables.$color-pale-red;
      }
    }

    &__update-btn {
      grid-row: 3;
      grid-column: 3/-1;

      justify-self: end;

      @include mixins.respond(tab-port) {
        grid-column: 1/-1;
        justify-self: center;
      }
    }

    &__text,
    &__text-edit {
      grid-row: 2;
      grid-column: 2/-1;

      @include mixins.respond(tab-port) {
        grid-column: 1/-1;
      }

      &__replying-to {
        color: variables.$color-moderate-blue;
        font-weight: 600;
      }
    }

    &__text-edit {
      color: variables.$color-dark-blue;
    }

    &__confirm-delete {
      display: flex;
      flex-direction: column;
      gap: 2rem;

      &__header {
        color: variables.$color-dark-blue;
      }

      &__btn-container {
        display: flex;
        justify-content: space-evenly;

        gap: 1rem;

        & > :first-child {
          background-color: variables.$color-grayish-blue;
        }
      }

      &__btn {
        width: 100%;
        text-transform: uppercase;

        font-size: 1.6rem;
        font-weight: 500;
        color: variables.$color-white;

        padding: 1rem 0.5rem;
        border-radius: 0.8rem;
        background-color: variables.$color-soft-red;
        border: none;
        cursor: pointer;

        &:hover {
          filter: brightness(95%);
        }
      }
    }
  }

  &__replies {
    grid-column: 2/-1;
    display: flex;
    flex-direction: column;
    gap: 0.7rem;
    border-left: 0.2rem variables.$color-gray solid;
    padding: 0 0 0 3rem;
    margin: 1rem 0 0 3rem;

    @include mixins.respond(tab-port) {
      padding-left: 1rem;
      margin-left: 0;
    }
  }
}

